tests/baselines/reference/declFileWithInternalModuleNameConflictsInExtendsClause2.errors.txt
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(5,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(5,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(5,14): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== declFileWithInternalModuleNameConflictsInExtendsClause2.ts (4 errors) ====
    module X.A.C {
        export interface Z {
        }
    }
    module X.A.B.C {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                 ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class W implements A.C.Z { // This can refer to it as A.C.Z
        }
    }
    
    module X.A.B.C {
        module A {
        }
    }